[metadata]
name = vascuec
version = 0.1.0
description = Feature extraction pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = tba
author = Jan Philipp Albrecht, Wolfgang Giese, Leo Epstein
maintainer = Jan Philipp Albrecht, Wolfgang Giese, Leo Epstein
maintainer_email = tba
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = vascular cell, imaging, data analysis
project_urls =
    Source=https://github.com/wgiese/vascu-ec-app
    Tracker=https://github.com/wgiese/vascu-ec-app/issues

[options]
packages = vascu_ec
install_requires =
    cellpose
    numpy
    pandas
    scipy
    scikit-image
    matplotlib

python_requires = >=3.8

[options.entry_points]
console_scripts =
    vascu_ec=vascu_ec.__main__:main
    vascu_ec_test=vascu_ec.test.__main__:main
